; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/urlmon/extr_url.c_register_protocols.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/urlmon/extr_url.c_register_protocols.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@register_protocols.winetestW = internal constant [9 x i8] c"winetest\00", align 1
@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [35 x i8] c"CoInternetGetSession failed: %08x\0A\00", align 1
@protocol_cf = common dso_local global i32 0, align 4
@IID_NULL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [32 x i8] c"RegisterNameSpace failed: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @register_protocols to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_protocols() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i64, align 8
  %3 = call i64 @CoInternetGetSession(i32 0, i32** %1, i32 0)
  store i64 %3, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @S_OK, align 8
  %6 = icmp eq i64 %4, %5
  %7 = zext i1 %6 to i32
  %8 = load i64, i64* %2, align 8
  %9 = call i32 @ok(i32 %7, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i64 %8)
  %10 = load i64, i64* %2, align 8
  %11 = call i64 @FAILED(i64 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %0
  br label %25

14:                                               ; preds = %0
  %15 = load i32*, i32** %1, align 8
  %16 = call i64 @IInternetSession_RegisterNameSpace(i32* %15, i32* @protocol_cf, i32* @IID_NULL, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @register_protocols.winetestW, i64 0, i64 0), i32 0, i32* null, i32 0)
  store i64 %16, i64* %2, align 8
  %17 = load i64, i64* %2, align 8
  %18 = load i64, i64* @S_OK, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = load i64, i64* %2, align 8
  %22 = call i32 @ok(i32 %20, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i64 %21)
  %23 = load i32*, i32** %1, align 8
  %24 = call i32 @IInternetSession_Release(i32* %23)
  br label %25

25:                                               ; preds = %14, %13
  ret void
}

declare dso_local i64 @CoInternetGetSession(i32, i32**, i32) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i64 @FAILED(i64) #1

declare dso_local i64 @IInternetSession_RegisterNameSpace(i32*, i32*, i32*, i8*, i32, i32*, i32) #1

declare dso_local i32 @IInternetSession_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
